# symmetrix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
libsymmetrix/: CMakeLists.txt
libsymmetrix/source/: cblas.hpp  cubic_spline.cpp  cubic_spline.hpp  cubic_spline_kokkos.cpp  cubic_spline_kokkos.hpp  cubic_spline_set.cpp  cubic_spline_set.hpp  cubic_spline_set_kokkos.cpp  cubic_spline_set_kokkos.hpp  mace.cpp  mace.hpp  mace_kokkos.cpp  mace_kokkos.hpp  multilayer_perceptron.cpp  multilayer_perceptron.hpp  multilayer_perceptron_kokkos.cpp  multilayer_perceptron_kokkos.hpp  multivariate_polynomial.cpp  multivariate_polynomial.hpp  multivariate_polynomial_kokkos.cpp  multivariate_polynomial_kokkos.hpp  radial_function_set_kokkos.cpp  radial_function_set_kokkos.hpp  spherical_harmonic.cpp  spherical_harmonic.hpp  tools.cpp  tools.hpp  tools_kokkos.cpp  tools_kokkos.hpp  zbl.cpp  zbl.hpp  zbl_kokkos.cpp  zbl_kokkos.hpp
pair_symmetrix/: README.md  compute_symmetrix_mace_atom.cpp  compute_symmetrix_mace_atom.h  compute_symmetrix_maced_atom.cpp  compute_symmetrix_maced_atom.h  install.sh  pair_symmetrix_mace.cpp  pair_symmetrix_mace.h  pair_symmetrix_mace_kokkos.cpp  pair_symmetrix_mace_kokkos.h
pair_symmetrix/test/: conftest.py  test_pair_symmetrix_mace.py
symmetrix/: CMakeLists.txt  README.md  __init__.py  pyproject.toml
symmetrix/python/symmetrix/: __init__.py  convert_mace.py  symmetrix_calc.py
symmetrix/python/symmetrix/cli/: convert_mace.py
symmetrix/python/test/: test_symmetrix_calc.py
symmetrix/source/: cubic_spline.cpp  cubic_spline_kokkos.cpp  cubic_spline_set_kokkos.cpp  mace.cpp  mace_kokkos.cpp  multilayer_perceptron_kokkos.cpp  symmetrix.cpp  tools_kokkos.cpp  zbl.cpp
symmetrix/source/bindings/: zbl_kokkos.cpp
symmetrix/source/cpp/: cubic_spline_set.cpp  mace_kokkos.cpp  multilayer_perceptron.cpp  multivariate_polynomial.cpp  multivariate_polynomial_kokkos.cpp  spherical_harmonic.cpp  tools.cpp  utilities_kokkos.hpp
symmetrix/source/python/test/: test_symmetrix_calc.py
symmetrix/source/symmetrix/: __init__.py  extract_mace_data.py  symmetrix_calc.py
symmetrix/source/symmetrix/cli/: extract_mace.py
symmetrix/test/: conftest.py  test_cubic_spline.py  test_cubic_spline_kokkos.py  test_cubic_spline_set.py  test_cubic_spline_set_kokkos.py  test_lammpslib.py  test_mace.py  test_multilayer_perceptron.py  test_multilayer_perceptron_kokkos.py  test_multivariate_polynomial.py  test_symmetrix_calc.py  test_tools.py  test_zbl.py  test_zbl_kokkos.py
symmetrix/utilities/: convert.py  create_symmetrix_mace.py  symmetrix_calc.py  test_symmetrix_calc.py
