[build-system]
requires = ["scikit-build-core", "pybind11", "cmake>=3.27"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.27"
build-dir = "build"
wheel.exclude = ["lib/", "include/"]
wheel.packages = ["source/symmetrix"]

[project]
name = "symmetrix"
version = "0.0.1"
description = "Symmetrix — a package for functions equivariant under: translation, rotation, inversion, and exchange of particles."

[project.scripts]
symmetrix_extract_mace = "symmetrix.cli.extract_mace:main"
